# fly-in

./: Makefile  README.md  fly_in.py  pyproject.toml  test.txt
.github/workflows/: lint.yml
notes/: classes_structure.txt  project_structure.txt
src/features/algo/: algo.py  reservation_map.py
src/features/map/: Connection.py  Drone.py  Hub.py  Map.py
src/features/parser/: __init__.py  connection_data.py  hub_data.py  map_data.py
src/features/visualizer/: draw_map.py  map_visu.py  pannable_scroll_area.py  steps_tool_bar.py
src/utils/: __init__.py  types.py
tests/parser/: __init__.py  test_custom_false_maps.py  test_custom_maps.py  test_maps.tar  test_parser.py  test_subject_maps.py
tests/parser/invalid_maps/: map_1.txt  map_10.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_7.txt  map_8.txt  map_9.txt
tests/parser/valid_maps/: map_1.txt  map_10.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_7.txt  map_8.txt  map_9.txt
