[tool.poetry]
name = "fly-in"
version = "0.1.0"
description = ""
authors = ["gabach"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
