[tool.poetry]
name = "fly-in"
version = "0.1.0"
description = ""
authors = ["gabach"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyqt6 = "^6.10.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[[tool.mypy.overrides]]
module = [
    "src.features.models.Map",
    "src.features.models.Hub"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
